fixed autoclose onclick on mobile nav

--- a/src/Contactstyle.css
+++ b/src/Contactstyle.css
@@ -112,7 +112,7 @@ footer, footer >  p{
        
 }
 
-@media screen and (max-width: 820px){
+/* @media screen and (max-width: 820px){
        .contact-me{
               display: flex;
               flex-direction: column;
@@ -146,7 +146,7 @@ footer, footer >  p{
               
        }
        
-}
+} */
 @media screen and (max-width: 786px) {
        .contact-me{
               display: flex;
@@ -154,15 +154,15 @@ footer, footer >  p{
               align-items: center;
               flex-direction: column;
               overflow: hidden;
-              height: 50vh;
-              width: 100vw;
+              /* height: 50vh;
+              width: 100vw; */
        }
        .home-icons{
               display: flex;
               align-items: center;
               justify-content: center;
               flex-direction: column;
-              font-size: 15px;
+              /* font-size: 30px; */
               gap: 1rem;
        }
        .contact-me .contact-title{
@@ -174,10 +174,23 @@ footer, footer >  p{
        }
        .home-icons button{
               border: none;
-              font-size: 8px;
-             
+              /* font-size: 8px; */
               display: flex;
+              padding: 0;
+              height: 100%;
+              width: 100%;
               
+       }
+       .contact-container{
+              width: 500px;
+              height: 500px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+       }
+       .contact-header{
+              margin: 0;
+              padding: 0;
        }
    
 }
@@ -197,14 +210,15 @@ footer, footer >  p{
               align-items: center;
               justify-content: center;
               flex-direction: column;
-              font-size: 10px;
+              font-size: 15px;
               gap: 1rem;
               overflow: hidden;
+              padding: 0;
        }
        .contact-container{
               width: 500px;
               height: 500px;
-            
+              
        }
        .contact-header{
               overflow: hidden;
@@ -213,8 +227,9 @@ footer, footer >  p{
               font-size: 15px;
        }
        .contact-title-desc{
-              font-size: 10px;
+              font-size: 15px;
               
        }
+    
    
 }
