--- a/src/Navbarstyle.css
+++ b/src/Navbarstyle.css
@@ -14,7 +14,6 @@ body{
        /* 1. Setting the default main navbar container that will contain the `site-title` and the `nav-menu` */
        display: flex;
        justify-content: space-between;
-       background: #161616;
        padding: 0 50px; 
        position: fixed;
        width: 100vw;
@@ -332,8 +331,8 @@ body{
        /* transition: transform 0.3s ease-in; */
        color: white;
        flex-direction: column;
-        overflow-x: hidden;
-      
+       overflow-x: hidden;
+       
        
        }
 
